alignment issues

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -466,7 +466,7 @@ footer .copyright {
   display: inline-block;
   text-align: center;
   width: 80%;
-  margin-left: 125px;
+  margin-left: 100px;
 }
 
 .input-field {
